exports[`no-assert-throws-async > invalid(1): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.throws(async () => {});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	assert.throws(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(1): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.throws(async () => {});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
> 4 | 	assert.throws(async () => {});
    | 	^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  5 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	await assert.rejects(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(10): import test from 'node:test';\ntest('t', async t => { t.assert.throws(async () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => { t.assert.throws(async () => {}); });

`;

exports[`no-assert-throws-async > invalid(10): import test from 'node:test';\ntest('t', async t => { t.assert.throws(async () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', async t => { t.assert.throws(async () => {}); });
    |                        ^^^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | test('t', async t => { await t.assert.rejects(async () => {}); });

`;

exports[`no-assert-throws-async > invalid(11): import {beforeEach} from 'node:test';\nbeforeEach(t => {\n\tt.assert.throws(async () => {});\n}); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(t => {
  3 | 	t.assert.throws(async () => {});
  4 | });

`;

exports[`no-assert-throws-async > invalid(11): import {beforeEach} from 'node:test';\nbeforeEach(t => {\n\tt.assert.throws(async () => {});\n}); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(t => {
> 3 | 	t.assert.throws(async () => {});
    | 	^^^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  4 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(t => {
  3 | 	t.assert.rejects(async () => {});
  4 | });

`;

exports[`no-assert-throws-async > invalid(12): import test from 'node:test';\ntest('t', async ({assert}) => {\n\tassert.throws(async () => {});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async ({assert}) => {
  3 | 	assert.throws(async () => {});
  4 | });

`;

exports[`no-assert-throws-async > invalid(12): import test from 'node:test';\ntest('t', async ({assert}) => {\n\tassert.throws(async () => {});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async ({assert}) => {
> 3 | 	assert.throws(async () => {});
    | 	^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  4 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | test('t', async ({assert}) => {
  3 | 	await assert.rejects(async () => {});
  4 | });

`;

exports[`no-assert-throws-async > invalid(13): import test from 'node:test';\ntest('t', async ({assert: {throws}}) => {\n\tthrows(async () => {});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async ({assert: {throws}}) => {
  3 | 	throws(async () => {});
  4 | });

`;

exports[`no-assert-throws-async > invalid(13): import test from 'node:test';\ntest('t', async ({assert: {throws}}) => {\n\tthrows(async () => {});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async ({assert: {throws}}) => {
> 3 | 	throws(async () => {});
    | 	^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  4 | });

`;

exports[`no-assert-throws-async > invalid(14): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tclass A {\n\t\tstatic {\n\t\t\tassert.throws(async () => {});\n\t\t}\n\t}\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	class A {
  5 | 		static {
  6 | 			assert.throws(async () => {});
  7 | 		}
  8 | 	}
  9 | });

`;

exports[`no-assert-throws-async > invalid(14): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tclass A {\n\t\tstatic {\n\t\t\tassert.throws(async () => {});\n\t\t}\n\t}\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	class A {
  5 | 		static {
> 6 | 			assert.throws(async () => {});
    | 			^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  7 | 		}
  8 | 	}
  9 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	class A {
  5 | 		static {
  6 | 			assert.rejects(async () => {});
  7 | 		}
  8 | 	}
  9 | });

`;

exports[`no-assert-throws-async > invalid(15): import {throws} from 'node:assert';\nthrows(async () => {}); 1`] = `

  1 | import {throws} from 'node:assert';
  2 | throws(async () => {});

`;

exports[`no-assert-throws-async > invalid(15): import {throws} from 'node:assert';\nthrows(async () => {}); 2`] = `

Message:
  1 | import {throws} from 'node:assert';
> 2 | throws(async () => {});
    | ^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.

`;

exports[`no-assert-throws-async > invalid(16): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.throws(async (): Promise<void> => {}, TypeError);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	assert.throws(async (): Promise<void> => {}, TypeError);
  5 | });

`;

exports[`no-assert-throws-async > invalid(16): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.throws(async (): Promise<void> => {}, TypeError);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
> 4 | 	assert.throws(async (): Promise<void> => {}, TypeError);
    | 	^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  5 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	await assert.rejects(async (): Promise<void> => {}, TypeError);
  5 | });

`;

exports[`no-assert-throws-async > invalid(17): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.throws((async () => {}) as any);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	assert.throws((async () => {}) as any);
  5 | });

`;

exports[`no-assert-throws-async > invalid(17): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.throws((async () => {}) as any);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
> 4 | 	assert.throws((async () => {}) as any);
    | 	^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  5 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	await assert.rejects((async () => {}) as any);
  5 | });

`;

exports[`no-assert-throws-async > invalid(18): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.throws(async () => {}) as Promise<void>;\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	assert.throws(async () => {}) as Promise<void>;
  5 | });

`;

exports[`no-assert-throws-async > invalid(18): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.throws(async () => {}) as Promise<void>;\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
> 4 | 	assert.throws(async () => {}) as Promise<void>;
    | 	^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  5 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	assert.rejects(async () => {}) as Promise<void>;
  5 | });

`;

exports[`no-assert-throws-async > invalid(19): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert?.throws(async () => {});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	assert?.throws(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(19): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert?.throws(async () => {});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
> 4 | 	assert?.throws(async () => {});
    | 	^^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  5 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	await assert?.rejects(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(2): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.throws(async function () {});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	assert.throws(async function () {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(2): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.throws(async function () {});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
> 4 | 	assert.throws(async function () {});
    | 	^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  5 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	await assert.rejects(async function () {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(20): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\t(assert.throws as any)(async () => {});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	(assert.throws as any)(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(20): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\t(assert.throws as any)(async () => {});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
> 4 | 	(assert.throws as any)(async () => {});
    | 	 ^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  5 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	await (assert.rejects as any)(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(21): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tawait (assert.throws as any)(async () => {});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	await (assert.throws as any)(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(21): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tawait (assert.throws as any)(async () => {});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
> 4 | 	await (assert.throws as any)(async () => {});
    | 	       ^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  5 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	await (assert.rejects as any)(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(22): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tx ? assert.throws(async () => {}) as any : 0;\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	x ? assert.throws(async () => {}) as any : 0;
  5 | });

`;

exports[`no-assert-throws-async > invalid(22): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tx ? assert.throws(async () => {}) as any : 0;\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
> 4 | 	x ? assert.throws(async () => {}) as any : 0;
    | 	    ^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  5 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	x ? assert.rejects(async () => {}) as any : 0;
  5 | });

`;

exports[`no-assert-throws-async > invalid(3): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.throws(async () => {}, /boom/);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	assert.throws(async () => {}, /boom/);
  5 | });

`;

exports[`no-assert-throws-async > invalid(3): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.throws(async () => {}, /boom/);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
> 4 | 	assert.throws(async () => {}, /boom/);
    | 	^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  5 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	await assert.rejects(async () => {}, /boom/);
  5 | });

`;

exports[`no-assert-throws-async > invalid(4): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.strict.throws(async () => {});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	assert.strict.throws(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(4): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.strict.throws(async () => {});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
> 4 | 	assert.strict.throws(async () => {});
    | 	^^^^^^^^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  5 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	await assert.strict.rejects(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(5): import test from 'node:test';\nimport {strict as strictAssert} from 'node:assert';\ntest('t', async () => {\n\tstrictAssert.throws(async () => {});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {strict as strictAssert} from 'node:assert';
  3 | test('t', async () => {
  4 | 	strictAssert.throws(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(5): import test from 'node:test';\nimport {strict as strictAssert} from 'node:assert';\ntest('t', async () => {\n\tstrictAssert.throws(async () => {});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {strict as strictAssert} from 'node:assert';
  3 | test('t', async () => {
> 4 | 	strictAssert.throws(async () => {});
    | 	^^^^^^^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  5 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import {strict as strictAssert} from 'node:assert';
  3 | test('t', async () => {
  4 | 	await strictAssert.rejects(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(6): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.doesNotThrow(async () => {});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	assert.doesNotThrow(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(6): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tassert.doesNotThrow(async () => {});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
> 4 | 	assert.doesNotThrow(async () => {});
    | 	^^^^^^^^^^^^^^^^^^^ \`doesNotThrow\` does not catch an async function, which never throws synchronously. Use \`doesNotReject\` instead.
  5 | });

Suggestion 1/1: Replace with \`doesNotReject\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	await assert.doesNotReject(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(7): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tawait assert.throws(async () => {});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	await assert.throws(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(7): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', async () => {\n\tawait assert.throws(async () => {});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
> 4 | 	await assert.throws(async () => {});
    | 	      ^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.
  5 | });

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', async () => {
  4 | 	await assert.rejects(async () => {});
  5 | });

`;

exports[`no-assert-throws-async > invalid(8): import assert from 'node:assert';\nassert.throws(async () => {}); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(async () => {});

`;

exports[`no-assert-throws-async > invalid(8): import assert from 'node:assert';\nassert.throws(async () => {}); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(async () => {});
    | ^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => {});

`;

exports[`no-assert-throws-async > invalid(9): import assert from 'node:assert';\nconst promise = assert.throws(async () => {}); 1`] = `

  1 | import assert from 'node:assert';
  2 | const promise = assert.throws(async () => {});

`;

exports[`no-assert-throws-async > invalid(9): import assert from 'node:assert';\nconst promise = assert.throws(async () => {}); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | const promise = assert.throws(async () => {});
    |                 ^^^^^^^^^^^^^ \`throws\` does not catch an async function, which never throws synchronously. Use \`rejects\` instead.

Suggestion 1/1: Replace with \`rejects\`.:
  1 | import assert from 'node:assert';
  2 | const promise = assert.rejects(async () => {});

`;
